Add leetcode.com problems 26,27,28,35,58,66

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 
   "require": {
     "xwish/utils" : "dev-master",
-    "xwish/math" : "dev-master"
+    "xwish/math" : "dev-master",
+    "ext-bcmath": "*"
   },
 
   "autoload": {
